# oglr-lib

./: .gitignore  CMakeLists.txt  oglr-lib.kdev4
include/oglr/: application.hpp  oglr.h  window.hpp
include/oglr/extra/: logger.hpp
src/: application.cpp  logger.cpp  window.cpp
